[package]
name = "cow-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cow_solver"
path = "src/lib.rs"

[[bin]]
name = "cow-solver"
path = "src/main.rs"

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"]}

# logging
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"
clap = { version = "4.4.3", features = ["derive"] }
url = {version = "2.4.1", features = ["serde"] }
